src/test/ui/span/issue-23729.stderr
error[E0046]: not all trait items implemented, missing: `Item`
  --> $DIR/issue-23729.rs:10:9
   |
LL |         impl Iterator for Recurrence {
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `Item` in implementation
   |
   = note: `Item` from trait: `type Item;`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0046`.
